/*******************************************************************************
 * This file is part of OpenNMS(R).
 *
 * Copyright (C) 2022 The OpenNMS Group, Inc.
 * OpenNMS(R) is Copyright (C) 1999-2022 The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, either version 3 of the License,
 * or (at your option) any later version.
 *
 * OpenNMS(R) is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with OpenNMS(R).  If not, see:
 *      http://www.gnu.org/licenses/
 *
 * For more information contact:
 *     OpenNMS(R) Licensing <license@opennms.org>
 *     http://www.opennms.org/
 *     http://www.opennms.com/
 *******************************************************************************/
syntax = "proto3";

import "google/protobuf/any.proto";

package opennms.sink.traps;
option java_multiple_files = true;
option java_package = "org.opennms.sink.traps.contract";

message TrapConfig {
  string snmp_trap_address = 1;
  int32 snmp_trap_port = 2;
  bool new_suspect_on_trap = 3;
  bool include_raw_message = 4;
  bool use_address_from_varbind = 5;
  repeated SnmpV3User snmp_v3_user = 6;
  ListenerConfig listener_config = 7;
}

message SnmpV3User {
  string engine_id = 1;
  string security_name = 2;
  int32 security_level = 3;
  string auth_passphrase = 4;
  string privacy_passphrase = 5;
  string auth_protocol = 6;
  string privacy_protocol = 7;
}

message ListenerConfig {
  int32  queue_size = 1;
  int32  batch_size = 2;
  int32  batch_interval_ms = 3;
  int32  num_threads = 4;
}


